--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-tailwind/react": "^0.3.4",
+    "@material-ui/core": "^4.12.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
